--- a/DesignerRHN/DesignerRHN-war/web/operando.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/operando.xhtml
@@ -38,7 +38,7 @@
                                             </h:outputText>
                                         </f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{op.nombre}" id="editarNombres" style=" border-radius: 0px; width: 99.5%; text-transform: uppercase"> 
+                                            <p:inputText value="#{op.nombre}" id="editarNombres" style=" border-radius: 0px; width: 99.5%; text-transform: uppercase;height :12px"> 
                                                 <p:ajax event="select" listener="#{controlOperando.cambiarIndice(indice, 1)}" />
                                                 <p:ajax event="change" listener="#{controlOperando.modificarOperandos(indice, 'N', op.nombre)}" update="@this" />
                                             </p:inputText> 
@@ -80,7 +80,7 @@
                                             </h:outputText>
                                         </f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText readonly="true" value="#{op.valor}" id="editarValores" style=" border-radius: 0px; width: 99.5%; text-transform: uppercase"> 
+                                            <p:inputText readonly="true" value="#{op.valor}" id="editarValores" style=" border-radius: 0px; width: 99.5%; text-transform: uppercase;height :12px"> 
                                                 <p:ajax event="select" listener="#{controlOperando.cambiarIndice(indice, 3)}" />
                                                 <p:ajax event="change" listener="#{controlOperando.modificarOperandos(indice, 'N', op.valor)}" update="@this" />
                                             </p:inputText> 
@@ -99,7 +99,7 @@
                                             </h:outputText>
                                         </f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{op.descripcion}" id="editarDescripcion" style=" border-radius: 0px; width: 99.5%; text-transform: uppercase"> 
+                                            <p:inputText value="#{op.descripcion}" id="editarDescripcion" style=" border-radius: 0px; width: 99.5%; text-transform: uppercase;height :12px"> 
                                                 <p:ajax event="select" listener="#{controlOperando.cambiarIndice(indice, 4)}" />
                                                 <p:ajax event="change" listener="#{controlOperando.modificarOperandos(indice, 'N', op.descripcion)}" update="@this" />
                                             </p:inputText> 
@@ -117,7 +117,7 @@
                                         <p:tooltip  for="headerCambio" value="#{msg['cambioanual']}" />
                                     </f:facet>  
 
-                                    <p:selectBooleanCheckbox value="#{op.estadoCambio}">  
+                                    <p:selectBooleanCheckbox value="#{op.estadoCambio}" style="height :12px; position: relative;top: -3px">  
                                         <p:ajax event="change" listener="#{controlOperando.modificarOperandos(indice, 'N', op.estadoCambio)}" update="@this"/>  
                                     </p:selectBooleanCheckbox> 
 
@@ -129,10 +129,9 @@
                                         <p:tooltip  for="headerActualizable" value="#{msg['actualizable']}" />
                                     </f:facet>  
 
-                                    <p:selectBooleanCheckbox value="#{op.estadoActualizable}">  
+                                    <p:selectBooleanCheckbox value="#{op.estadoActualizable}" style="height :12px; position: relative;top: -3px" >  
                                         <p:ajax event="change" listener="#{controlOperando.modificarOperandos(indice, 'N', op.estadoActualizable)}" update="@this"/>  
                                     </p:selectBooleanCheckbox> 
-
                                 </p:column>
 
                                 <p:column headerText="#{msg['codigo']}" width="50" sortBy="#{op.codigo}" filterBy="#{op.codigo}"  filterMatchMode="contains" id="operandosCodigos" filterStyle="display: none; visibility: hidden;"  >  
@@ -142,7 +141,7 @@
                                             </h:outputText>
                                         </f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText readonly="true" value="#{op.codigo}" id="editarCodigos" style=" border-radius: 0px; width: 99.5%; text-transform: uppercase"> 
+                                            <p:inputText readonly="true" value="#{op.codigo}" id="editarCodigos" style=" border-radius: 0px; width: 99.5%; text-transform: uppercase;height :12px"> 
                                                 <p:ajax event="select" listener="#{controlOperando.cambiarIndice(indice, 7)}" />
                                                 <p:ajax event="change" listener="#{controlOperando.modificarOperandos(indice, 'N', op.codigo)}" update="@this" />
                                             </p:inputText> 
