--- a/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
@@ -111,7 +111,7 @@
                                         <p:commandButton style="background-image: url(Imagenes/buscarlaboral1.gif); position: absolute; top: 60px; width: 28px; height: 28px; background-size: 100% 100%; left: 12px; background-repeat: no-repeat; " action="busquedaAvanzada" id="buscarLaboral" value="" />
                                         <p:tooltip  for="buscarLaboral" value="#{msg['badl']}"  />
 
-                                        <p:commandButton style="background-image: url(Imagenes/buscarpersonal1.gif); position: absolute; left: 43px; top: 60px; width: 28px; height: 28px; background-size: 100% 100%; background-repeat: no-repeat; " id="buscarPersonal" value="" />
+                                        <p:commandButton style="background-image: url(Imagenes/buscarpersonal1.gif); position: absolute; left: 43px; top: 60px; width: 28px; height: 28px; background-size: 100% 100%; background-repeat: no-repeat; " action="busquedaAvanzada" id="buscarPersonal" value="" />
                                         <p:tooltip  for="buscarPersonal" value="#{msg['badp']}"  />
 
                                         <p:commandButton style="background-image: url(Imagenes/buscarrapida1.gif); position: absolute; left: 74px; top: 60px; width: 28px; height: 28px; background-size: 100% 100%; background-repeat: no-repeat; " id="busquedaRapida" value=""
