--- a/DesignerRHN/DesignerRHN-war/web/emplacumulados.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/emplacumulados.xhtml
@@ -319,7 +319,7 @@
                         </p:toolbar>
 
                         <p:commandButton style=" position: absolute; left: 15px; top: 470px;  " icon="ui-icon-refresh"  actionListener="#{controlEmplAcumulados.cancelarModificacion()}" id="REFRESCAR" value="Refrescar" process="@this" />
-                        <p:commandButton style=" position: absolute; left: 785px; top: 470px; " icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" value="Atras"    />
+                        <p:commandButton style=" position: absolute; left: 785px; top: 470px; " icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" value="Atras" action="nomina"   />
                     </p:panel>
                     <p:hotkey bind="ctrl+f11" actionListener="#{controlEmplAcumulados.activarCtrlF11()}"  /> 
 
